# argp-standalone-old

./: CHANGELOG  environment.yml  meson.build
.github/workflows/: main.yml
argp-standalone/: argp-fmtstream.h  argp-help.c  argp-parse.c  argp-test.c  argp.h  config.h.in  meson.build  strcasecmp.c
